src/styles/global.css
/* ... */
* {
  box-sizing: border-box;
}

:focus-visible {
  outline: 2px solid #6366f1;
  outline-offset: 2px;
}

:focus:not(:focus-visible) {
  outline: none;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
  color: #333;
  background-color: #fff;
  margin: 0;
  font-family: Arial, sans-serif;
  font-size: 14px;
  line-height: 20px;
}

img {
  max-width: 100%;
  vertical-align: middle;
  display: inline-block;
}

.w-inline-block {
  max-width: 100%;
  display: inline-block;
}

.w-button {
  color: #fff;
  line-height: inherit;
  cursor: pointer;
  background-color: #3898ec;
  border: 0;
  border-radius: 0;
  padding: 9px 15px;
  text-decoration: none;
  display: inline-block;
}

h1,
h2,
h3,
h4 {
  margin-bottom: 10px;
  font-weight: bold;
}

h1 {
  margin-top: 20px;
  font-size: 38px;
  line-height: 44px;
}

h2 {
  margin-top: 20px;
  font-size: 30px;
  line-height: 36px;
}

h3 {
  margin-top: 20px;
  font-size: 24px;
  line-height: 30px;
}

h4 {
  margin-top: 10px;
  font-size: 18px;
  line-height: 24px;
}

p {
  margin-top: 0;
  margin-bottom: 10px;
}

ul {
  margin-top: 0;
  margin-bottom: 10px;
  padding-left: 40px;
}

@media screen and (max-width: 767px) {
  .w-nav-brand {
    padding-left: 10px;
  }
}

.w-richtext:before,
.w-richtext:after {
  content: ' ';
  grid-area: 1 / 1 / 2 / 2;
  display: table;
}

.w-richtext:after {
  clear: both;
}

.w-richtext ul {
  overflow: hidden;
}

.w-nav {
  z-index: 1000;
  background: #ddd;
  position: relative;
}

.w-nav:before,
.w-nav:after {
  content: ' ';
  grid-area: 1 / 1 / 2 / 2;
  display: table;
}

.w-nav:after {
  clear: both;
}

.w-nav-brand {
  float: left;
  color: #333;
  text-decoration: none;
  position: relative;
}

.w-nav-menu {
  float: right;
  position: relative;
}

.w-nav-menu.is-open {
  display: block !important;
  position: fixed;
  left: 0;
  right: 0;
  top: 92px;
}

.w-nav-button {
  float: right;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 18px;
  font-size: 24px;
  display: none;
  position: relative;
}

.w-nav-button:focus {
  outline: 0;
}

@media screen and (max-width: 991px) {
  .w-nav[data-collapse='medium'] .w-nav-menu {
    display: none;
  }

  .w-nav[data-collapse='medium'] .w-nav-menu.is-visible {
    display: block;
    position: fixed;
    left: 0;
    right: 0;
    top: 92px;
    background: white;
    transform: translateY(-50%);
    opacity: 0;
    transition: transform 250ms ease, opacity 250ms ease;
    will-change: transform, opacity;
  }

  .w-nav[data-collapse='medium'] .w-nav-menu.is-visible.is-open {
    transform: translateY(0);
    opacity: 1;
  }

  .w-nav[data-collapse='medium'] .w-nav-button {
    display: block;
  }
}

@media screen and (max-width: 767px) {
  .w-nav-brand {
    padding-left: 10px;
  }
}

body {
  color: #333;
  background-color: #161616;
  font-family: IBM Plex Sans, sans-serif;
  font-size: 14px;
  line-height: 20px;
}

h1 {
  color: #fff;
  letter-spacing: -0.5px;
  margin-top: 0;
  margin-bottom: 18px;
  font-size: 58px;
  font-weight: 300;
  line-height: 72px;
}

h2 {
  color: #fff;
  margin-top: 0;
  margin-bottom: 12px;
  font-size: 32px;
  font-weight: 400;
  line-height: 42px;
}

h3 {
  color: #fff;
  margin-top: 0;
  margin-bottom: 12px;
  font-size: 24px;
  font-weight: 400;
  line-height: 32px;
}

h4 {
  color: #fff;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 18px;
  font-weight: 400;
  line-height: 24px;
}

li {
  color: #a8a8a8;
}

table {
  color: #a8a8a8;
}

p {
  color: #a8a8a8;
  margin-bottom: 10px;
  font-size: 16px;
  line-height: 26px;
}

.content {
  width: 100vw;
  height: 100vh;
  display: flex;
}

.sidebar {
  width: 100%;
  height: 100%;
  max-width: 280px;
  background-color: #1c1c1c;
  border-right: 1px solid #353535;
  padding: 32px;
}

.nav-content {
  width: 100%;
  height: 100%;
  grid-column-gap: 36px;
  grid-row-gap: 36px;
  flex-direction: column;
  display: flex;
}

.label-white {
  color: #fff;
  margin-bottom: 2px;
  font-size: 16px;
  line-height: 24px;
}

.label-gray {
  color: #a8a8a8;
  font-size: 14px;
  line-height: 22px;
}

.niv-data {
  align-items: center;
  display: flex;
}

.niv-image {
  width: 48px;
  height: 48px;
  border: 1px solid #353535;
  border-radius: 100px;
  margin-right: 12px;
}

.main {
  width: 100%;
  height: 100%;
  background-image: linear-gradient(rgba(28, 28, 28, 0.64), rgba(28, 28, 28, 0.64)), url('/assets/grid-top-right.svg'), linear-gradient(rgba(28, 28, 28, 0.24), rgba(28, 28, 28, 0.24));
  background-position: 0 0, 0 0, 0 0;
  background-size: auto, auto 1130px, auto;
  flex-direction: column;
  align-items: center;
  padding: 46px 48px 82px;
  display: flex;
  overflow: auto;
}

.container {
  width: 100%;
  max-width: 680px;
  grid-column-gap: 68px;
  grid-row-gap: 68px;
  flex-direction: column;
  display: flex;
}

.lead {
  max-width: 580px;
  color: #fff;
  margin-bottom: 0;
  line-height: 26px;
}

.button {
  color: #fff;
  background-color: #1c1c1c;
  border: 1px solid #363636;
  border-right-color: #353535;
  border-radius: 8px;
  padding: 12px 20px;
  font-size: 14px;
  font-weight: 500;
  line-height: 26px;
  transition: all 40ms;
}

.button:hover {
  background-color: #202020;
  box-shadow: 0 2px 4px rgba(8, 8, 8, 0.82);
}

.fold-content {
  margin-bottom: 48px;
}

.mini-label-white {
  color: #fff;
  letter-spacing: 0.75px;
  text-transform: uppercase;  
  font-family: IBM Plex Mono, sans-serif;
  font-size: 10px;
  font-weight: 400;
  line-height: 24px;
}

.mini-label-white.gray-color {
  color: #a8a8a8;
}

.chips-container {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  flex-wrap: wrap;
  align-items: flex-start;
  margin-top: 8px;
  display: flex;
}

.chips-container.chips-container-small-width {
  max-width: 380px;
}
/* ... */

